appId: com.willowtreeapps.myapp.dev # Development variant, which `yarn ios` / `yarn android` install. Replace with your app id.
---
- launchApp:
    arguments:
      isE2E: true # Used in index.ts to turn off LogBox
- assertVisible: 'Home'
- tapOn: 'Item 1'
- assertVisible: 'Article'
- tapOn:
    id: "BackButton"
- tapOn: 'Settings'
- assertVisible: 'Settings'
